data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_728.wast
;; 9. **Test Description**: A loop utilizing a `br_if` whose condition is a comparison of stack-popped values. Verify the correct behavior based on varied stack inputs.    - **Constraint**: Tests if `br_if` correctly evaluates conditions involving stack-popped value comparisons.    - **Differential Behavior**: Loop continues or exits erroneously based on stack value comparisons due to condition evaluation issues.

(assert_invalid
  (module
    (func (loop (result i32)
      (i32.const 1)  ;; pushing first value to the stack
      (i32.const 2)  ;; pushing second value to the stack
      (i32.eq)       ;; comparison
      (br_if 0)      ;; conditional branch to the beginning of the loop
      (i32.const 0)  ;; push 0 to the stack if the branch is not taken
      (return)       ;; end the function
      (unreachable)
    ))
  )
  "type mismatch"
)